<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.nav_alfabeto">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <TextView
            android:id="@+id/tituloAlfa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloAlfabeto"
            android:textSize="@dimen/size_titulo2"/>

        <TextView
            android:id="@+id/lorem0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_introduccion0"
            android:textSize="@dimen/size_parrafo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <TextView
            android:id="@+id/lorem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TEXT_introduccion1"
            android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <TextView
            android:id="@+id/lorem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_introducion2"
            android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/id_cardHiragana"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:backgroundTint="@color/azulclaro">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/id_hira"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cardV1"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <TextView
            android:id="@+id/lorem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_introducion3"
            android:textSize="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/id_cardKatakana"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:backgroundTint="@color/azulclaro">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/id_kana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cardV2"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/id_cardCompuestos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            android:backgroundTint="@color/azuloscuro">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/id_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cardV3"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    </ScrollView>
</FrameLayout>