<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.nav_conversacion">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="parrafo 1"
                android:textSize="@dimen/size_titulo2"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_con1"
                android:textSize="@dimen/size_parrafo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="parrafo 2"
                android:textSize="@dimen/size_titulo2"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_con2"
                android:textSize="@dimen/size_parrafo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="parrafo 3"
                android:textSize="@dimen/size_titulo2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_con3"
                android:textSize="@dimen/size_parrafo"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>