<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="657dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/idcardView"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="285dp"
                    android:layout_height="134dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/logob" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    app:boxStrokeColor="@color/azulclaro"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/azulclaro"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/azulclaro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_login_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textSize="@dimen/size_parrafo"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="83dp"
                    app:boxStrokeColor="@color/azulclaro"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/azulclaro"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/azulclaro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/size_parrafo"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/id_bt_inicio"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/azulclaro"
                    android:text="@string/login"
                    app:cornerRadius="10dp"
                    android:textSize="@dimen/size_parrafo"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/id_bt_registro"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:minHeight="48dp"
                    android:text="@string/signIn"
                    android:textColor="@color/azulclaro"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="@color/azulclaro"
                    android:textSize="@dimen/size_parrafo"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/azulclaro"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="「千里の道も一歩から」"
                    android:gravity="center"
                    android:textSize="@dimen/size_titulo2"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>